Java 16 + Jetty 10